@@ -2,11 +2,11 @@
 
 | | |
 |---|---|
-| **Status** | OPEN — **bisected to a named commit**, root cause not yet isolated within it |
+| **Status** | OPEN — **root-caused**, fix not yet written |
 | **Symptom** | `java.lang.AssertionError: expected:<8> but was:<9>` (`TestDefaultInstanceManager.java:66`) |
 | **First bad commit** | [`1d2817c75`](#the-bisect) `feat(types,gc,vm,jit): delete identity_hash_code from ObjectHeader` (2026-08-07 08:24) |
 | **Reproduces** | default GC and ZGC; **G1 passes**. Deterministic, ~17 s standalone |
-| **Fourth in a chain** | [07-14](../../internal/fixed-suite-bugs/tomcat/defaultinstancemanager-classunloading-count-mismatch-FIXED.md) · [07-27](../../internal/fixed-suite-bugs/tomcat/defaultinstancemanager-classunload-offbyone-recurrence-FIXED.md) · [08-01](../../internal/fixed-suite-bugs/tomcat/defaultinstancemanager-third-recurrence-FIXED.md) |
+| **Fourth in a chain** | 07-14 `fixed-suite-bugs/tomcat/defaultinstancemanager-classunloading-count-mismatch-FIXED.md` · 07-27 `fixed-suite-bugs/tomcat/defaultinstancemanager-classunload-offbyone-recurrence-FIXED.md` · 08-01 `fixed-suite-bugs/tomcat/defaultinstancemanager-third-recurrence-FIXED.md` |
 
 ## Reproduction
 
@@ -74,11 +74,16 @@ Two traps in reading those rows, both of which cost a round of investigation:
   the header's `class_id` and instance→loader is the `loader_pin` side table;
   neither is a ref slot, so neither appears in a referrer walk. The mirror
   having no referrer is the EXPECTED state, not a finding.
-* **`young_survivor=true` is not a wrong verdict.**
+* **`young_survivor=true` looked like a faithful report and is not one.**
   `is_live_young_survivor` is `word0 != 0` — it reports whether the sweep
-  zeroed the span, and never consults a mark bit. So for a young object
-  `is_marked` is a faithful reporter of what the MARKER decided. The verdict
-  is right; the marking is what needs explaining.
+  zeroed the span, never a mark bit. I first read that as "so it faithfully
+  reports what the MARKER decided, and the marking is what needs explaining",
+  and wrote that down. It is wrong, and the section below measures why: the
+  marker never marked this object, and the sweep never *visited* it either, so
+  the byte pattern reports the liveness of neither. Inferring a verdict from a
+  side effect is sound only while every path that skips the side effect is
+  also a path that cannot leave a dead object behind — and the sweep has at
+  least three such paths.
 
 Also eliminated:
 
@@ -95,22 +100,145 @@ Also eliminated:
   `mark_and_push_rescues_a_walked_base_the_plausibility_screen_rejects` passes
   on dev.
 
-## The open question
+## The marker is innocent. The SWEEP never visits the span.
 
-Something in the young non-moving marker marks the evicted JSP's `ClassLoader`,
-with no root, no heap referrer and no `loader_pin` instance — and it started
-doing so when the identity hash left the header. The commit's own message names
-the mechanism class:
+`CRATONVM_DBG_MARK_WHY_CLASS=<internal/class/Name>` arms a watch on that class's
+loader (the address is not knowable before the class is defined) and labels
+every young-marker edge that reaches it, plus the sweep walk's decision at that
+base. Measured, dead loader vs live loader in the same run shape:
+
+| | `annotations_jsp` (evicted) | `bug36923_jsp` (live) |
+|---|---|---|
+| young-marker edges reaching the loader | **0** | 4 — `3x field`, `1x loader_pin` |
+| sweep walk stops at its base | **never** | yes, `side_marked=true` |
+
+The live loader is the control that proves the instrument can fire. So:
+
+1. The **marker is correct** — it never marks the evicted loader. Every root
+   source eliminated across four investigations was eliminated correctly.
+2. The **sweep walk never stops at that base.** I expected a skip list here — a
+   free block, a TLAB reservation, or an abandoned stretch — and the next
+   section measures that it is **none of them**. The walk covers the address
+   and strides over it.
+3. A span the walk never visits is **never zeroed**.
+4. `is_live_young_survivor` is literally `word0 != 0`, resting on "the young
+   sweep writes an ALL-ZERO header over every span it reclaims". An unvisited
+   span never got that write, so it reports **live**.
+5. `reconcile_class_mirrors` consults exactly that verdict, so it retains the
+   mirror; `rebuild_mirror_pins` re-registers it; the `WeakReference<Class>`
+   never clears; the annotation cache stays at 9.
+
+That is a complete chain from a false premise to the assertion, and it explains
+why every rooting lever was inert: nothing about rooting is wrong.
+
+The premise involved is the one the bisected commit is documented as having
+killed — "a fresh header is never all-zero" died when the hash went lazy. The
+section after next PROVES the connection rather than leaving it plausible.
+
+## Which skip arm? NONE
+
+`CRATONVM_DBG_MARK_WHY_CLASS` now also classifies the watched address against
+every stretch the walk can stride over, and reports where the walk ended.
+Measured on the failing run:
+
+```
+[MARKWHY] skip-arm probe: watch=0x28b16267140 off=0x4267140 used=0x603e118
+                          in_free_block=None in_jit_tlab_skip=None
+[MARKWHY] walk ended: cursor=0x603e118 used=0x603e118 watch_off=0x4267140
+                      objects_live=119985 objects_swept=0
+```
+
+All three candidates are eliminated:
+
+* **not a free block** — `in_free_block=None`;
+* **not a reserved TLAB tail** — `in_jit_tlab_skip=None` (consistent with
+  `--nojit` failing too);
+* **not an abandoned stretch** — the walk ran to completion, `cursor == used`,
+  and the watched offset is well inside the walked range.
+
+So the walk *covers* the address and still never stops at it. Its object grid
+strides over that base: some earlier object's computed size swallows the span.
+
+So the mirror is not retained by a rooting decision, a side-table edge, or a
+skip list. The next section shows what does it: the walk identifies the span as
+dead and then UNWINDS that decision, and re-anchors past it.
+
+## ROOT CAUSE: the sweep's all-zero-span anomaly screen fires on live objects
+
+`dead_regions` is not empty because the walk finds nothing dead. It finds
+27,252 dead objects and then throws almost all of them away. Per-unwind-site
+census on the failing run:
+
+```
+side_marked=118647  late_pinned=0  forwarded=0  header_marked=0
+dead_pushed=27252   unwinds=83  sites=[0, 83, 0, 0]
+unwound_entries=27285  dead_regions_final=51  side_sorted=132548
+```
+
+**All 83 unwinds come from one site**, and its trigger is:
+
+```rust
+let word0 = unsafe { *(obj_ptr as *const u64) };
+if word0 == 0 {
+    // "unlisted all-zero span" -> anomaly evidence
+    dead_regions.truncate(dead_watermark);   // drop every reclaim decision
+    // ... then re-anchor at the next FREE BLOCK, abandoning everything between
+```
+
+That screen exists because an all-zero header used to be proof of reclaimed
+memory. It rests on the premise the bisected commit is documented as killing,
+in its own words:
 
 > The stale-pointer detector and the zeroed-region screens keyed on "a fresh
 > header is never all-zero, because a hash is stamped at allocation". That
-> premise is dead: the hash is lazy now... The predicates were rewritten onto
-> the mark word and each says at the site that it is WEAKER, not equivalent.
+> premise is dead: the hash is lazy now, so a live never-hashed never-locked
+> bare `new Object()` reads all-zero exactly like reclaimed memory.
 
-The next step is to instrument the young marker's mark REASON for the loader
-address (the old-gen BFS already threads reason strings — `loader_pin`,
-`mirror_pin`, `metadata_pin`, `external-overlay`; the young marker does not),
-rather than to keep eliminating root sources from the outside.
+With `HEADER_SIZE` 16, `word0` is `class_id` (0..4) + `shape` (4..8). A live,
+never-hashed, never-locked object with `ClassId(0)` and no shape bits reads
+all-zero — indistinguishable from a reclaimed span by header bytes alone. So
+ordinary live objects now trip an anomaly screen **83 times per sweep**, and
+each hit discards every reclaim decision taken since the last anchor.
+
+That is the whole defect, and it produces the symptom twice over:
+
+1. **The unwind** throws away the evicted JSP loader's own reclaim decision
+   along with ~27k others, so its span is never zeroed and
+   `is_live_young_survivor` (`word0 != 0` — the loader has a real class id)
+   answers "live".
+2. **The resume** re-anchors at the next free block, "abandoning everything in
+   between" — which is why the earlier probe never saw the walk stop at that
+   base at all. The site's own comment already calls this resume behaviour
+   wrong and records it costing 233 MB of a 256 MB young generation on the H2
+   UPDATE path.
+
+## Scope
+
+This is not a Tomcat bug. The non-moving young sweep publishes **51 reclaimed
+regions out of 27,252 identified** on the `System.gc()` path.
+`TestDefaultInstanceManager` is simply the test that happens to assert on a
+consequence; everywhere else it costs throughput and footprint while failing
+nothing, which is why it went unnoticed from 08-07.
+
+(Correcting an earlier reading on this page: I first reported `objects_swept=0`
+as "the sweep reclaims nothing". That counter is incremented in the publication
+loop, and my probe printed before it. The accurate statement is the ratio
+above.)
+
+## The fix, and the constraint on it
+
+The screen must stop treating "all-zero header" as evidence of anything. The
+commit that broke it also closed the obvious repair: minting a hash eagerly to
+restore the invariant is not available, because a non-zero mark word loses the
+thin-lock CAS and every `synchronized` block in the program would inflate.
+
+The discriminator that IS available is the one the sweep already has:
+`side_sorted`, the complete live set (132,548 entries here). A span that is
+all-zero and NOT side-marked is legitimately reclaimable; the anomaly is
+all-zero AND on a stretch the grid cannot vouch for. Any fix must keep the
+double-free protection the site was written for — the comment above it records
+a real UAF from parsing zero spans as 40-byte phantom objects — so the
+conservative arm has to survive, just stop firing on live never-hashed objects.
 
 ## Do not close this without a regression pin
 
@@ -118,3 +246,85 @@ Three prior fixes, three recurrences, and the 08-01 page's own lesson was that
 the predicate it repaired **had no test**, which is how a one-line default flip
 disarmed it in silence. Whatever closes this needs a vector that runs in
 `regression-suite` — not a `probes/` reproducer that nothing schedules.
+
+## Two independent additions, 2026-08-10 (separate session)
+
+Both were found while working the same page from the sweep side, and neither
+changes the root cause above. They are recorded because one of them contradicts
+a row this page still carries, and the other names a second retention path.
+
+### `objects_swept` on the `walk ended` line is a structural zero
+
+`objects_swept` is declared at `gen_heap.rs:9439`, printed by
+`[MARKWHY] walk ended`, and incremented in exactly one place — the publication
+loop several hundred lines below that print. It reads 0 in every run on every
+workload, whatever the sweep reclaimed.
+
+An earlier revision of this page took that 0 as "this sweep reclaimed NOTHING",
+and from there to "no young object is reclaimed at all" and "class unloading
+cannot work by construction". The disposition census above settles it the other
+way — `dead_pushed=27252` — and so does
+`regression-suite/src/RClassUnloadSweep.java` (new, scheduled): a class defined
+in a throwaway loader, used, dropped and collected is unloaded on HotSpot and on
+CratonVM under the default collector, `CRATONVM_NO_MOVING_YOUNG=1`,
+`-XX:+UseG1GC` and `-XX:+UseZGC`.
+
+The line now reports the walk-time facts it can see and a new
+`[MARKWHY] sweep done` reports `objects_swept`/`bytes_swept` after the loop that
+writes them. Two further instruments came from the same reading:
+
+* `[MARKWHY] sweep enter` — prints whenever a watch is ARMED, with **no**
+  from-space condition. Every other MARKWHY line is gated on the watch being in
+  from-space, so they go silent together, and that silence has three causes
+  wanting three different next steps ("the sweep never ran", "it ran and the
+  object is elsewhere", "it ran and the walk never reached the object"). Only
+  the third is about the object.
+* `[MARKWHY] STRADDLE` — names the object whose computed extent swallows the
+  watched base. The pre-existing sweep hook tests `cursor == watch`, so it is
+  silent in exactly the case *The marker is innocent* measures, and cannot name
+  the culprit stride. `par_prefix_end` / `watch_in_par_prefix` are on the
+  `walk ended` line for the same reason: every sweep hook lives in the
+  SEQUENTIAL walk, so a watch inside the accepted parallel prefix is one the
+  sequential walk never visits by construction.
+
+### A second retention path: `collection-overlays` roots the JDT compiler graph
+
+`CRATONVM_DBG_ROOT_SOURCE=1` is new and records which named entry of
+`VM_ROOT_SOURCES` contributed each root; `[MIRRORWHY]` now prints
+`[root=<source>]` on each rendered path. Measured twice on the failing run, for
+the evicted `annotations_jsp`:
+
+```
+  33 [root=collection-overlays]        11 [root=collection-overlays]
+   6 [root=<not-a-direct-root>]         2 [root=<not-a-direct-root>]
+```
+
+with every attributed path of the shape
+
+```
+StackMapFrame -> VerificationTypeInfo -> SourceTypeBinding -> LookupEnvironment
+  -> JDTCompiler$1 -> JDTCompiler
+  -> JspCompilationContext / JspServletWrapper -> loader / instance
+```
+
+**This contradicts two rows this page still carries.** *What is measured* records
+`live_instances_of_this_loader=0` and `root_held_paths=1`; today's dev reports
+**1** and **8**, with `is_marked=true` on the loader. And *Also eliminated*
+dismisses overlay over-rooting because the gate skips under
+`major_gc_requested()` — but the roots are contributed anyway, on the default
+collector, in the failing run. That entry was eliminated by reading the gate
+rather than by asking which source rooted the object, which nothing could do
+until now; its own "21 direct hits on exactly this JSP cluster" was the answer.
+
+Whether this is a *second* defect or the same one seen from the other end is
+not settled here: an object the marker marked is reachable, which is a different
+statement from "dead but unreclaimed". Worth resolving before the fix above
+lands, because if the mirror is genuinely rooted then repairing the all-zero
+screen will not clear this assertion on its own.
+
+The trap in the obvious fix, if it turns out to be needed:
+`scan_external_roots` exists because an overlay backing array can be the ONLY
+reference to a live object, so widening the gate trades over-retention for a
+use-after-free. A JDT `StackMapFrame` reachable only from an overlay after
+compilation finished suggests stale overlay ENTRIES, in which case pruning is
+the fix and costs nothing in safety.
